# AFractalADay

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  aliases.js  crates.js  from_fractal_farm.sh  index.html  keys_and_secrets.json  readme.md  search-index.js  settings.html  source-files.js  todo.md
a_fractal_a_day/: FractalType.t.html  all.html  enum.FractalType.html  fn.postprocess_image.html  fn.postprocess_image_for_twitter.html  index.html  postprocess_image.v.html  postprocess_image_for_twitter.v.html  sidebar-items.js
a_fractal_a_day/color/: HSV.t.html  color_variance.v.html  count_same.v.html  fn.color_variance.html  fn.count_same.html  index.html  sidebar-items.js  struct.HSV.html  struct.RGB.html  struct.RGBA.html
a_fractal_a_day/colormap/: Colormap.t.html  index.html  sidebar-items.js  struct.Colormap.html
a_fractal_a_day/fractal/: Alphabet.t.html  Fractal.t.html  FractalBuilder.t.html  LSystem.t.html  Lrules.t.html  RngType.t.html  Transformation.t.html  enum.Alphabet.html  enum.Boundary.html  enum.EscapeTypes.html  enum.IterationFractalType.html  enum.Symmetry.html  enum.Transformation.html  enum.Variation.html  estimate_quality_after.v.html  fn.estimate_quality_after.html  fn.render_draft.html  fn.render_wrapper.html  index.html  render_draft.v.html  render_wrapper.v.html  sidebar-items.js  struct.AffineTransformation.html  struct.Fractal.html  struct.FractalBuilder.html  struct.FractalFlame.html  struct.Ising.html  struct.Lrules.html  struct.Style.html  trait.LSystem.html  trait.LatticeFractal.html  type.RngType.html
a_fractal_a_day/histogram/: ColoredHistogram.t.html  bounds_without_outliers.v.html  bounds_zoom.v.html  enum.BoundsTypes.html  fn.bounds.html  fn.bounds_without_outliers.html  fn.bounds_zoom.html  fn.histogram.html  fn.histogram1d.html  histogram1d.v.html  index.html  sidebar-items.js  struct.ColoredHistogram.html
a_fractal_a_day/numbers/: Coef.t.html  ComplexFunction.t.html  Cplx.t.html  Real.t.html  enum.Coef.html  enum.ComplexFunction.html  enum.Op.html  index.html  sidebar-items.js  type.Cplx.html  type.Real.html
a_fractal_a_day/png/: fn.save_png.html  index.html  save_png.v.html
a_fractal_a_day/png_helper/: fn.save_png.html  index.html  sidebar-items.js
benches/: benchmark.rs  benchmarks.rs
my_twitter/: Cargo.toml
my_twitter/src/: twitter.rs
src/: color.rs  colormap.rs  functions.rs  histogram.rs  iterated_fractal.rs  lib.rs  main.rs  newton_fractal.rs  numbers.rs  parse_cl.rs  png.rs  png_helper.rs  render_helper.rs  style.rs  twitter.rs
src/a_fractal_a_day/: color.rs.html  histogram.rs.html  lib.rs.html  numbers.rs.html  png.rs.html  png_helper.rs.html
src/colored_ifs/: mod.rs  (+1 more)
tests/: test_color.rs
(+198 files in other folders)
