[package]
name = "a_fractal_a_day"
version = "0.1.2"
authors = ["Hendrik Schawe <surt91@gmail.com>"]
description = "This is a Twitter bot, which can tweet pictures of random fractals."
homepage = "https://twitter.com/AFractalADay"
edition = "2018"

[[bin]]
name = "a_fractal_a_day"
doc = false
required-features = ["binaries"]

[dependencies]
png = "0.10"
rand = "^0.6"
rand_pcg = "^0.1"
num = {version = "*", features = ["serde"]}
itertools = "*"
rayon = "*"
num_cpus = "*"
time = "0.1"
clap = "*"

log = "*"
simplelog = "*"
log-panics = "*"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

lazy_static = "1.2.0"

[dependencies.turtle]
version = "0.1"
git = "https://github.com/surt91/turtle"

[dependencies.my_twitter]
path = "my_twitter"
optional = true

[features]
binaries = ["my_twitter"]

[dev-dependencies]
assert_approx_eq = "*"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true